Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137328

[Reg 6.7 -> 6.9] QJSEngine: created JavaScript objects does not have function hasOwnProperty

XMLWordPrintable

    • e0620d4d6 (dev), 956c5088d (6.10), 3f5c57629 (6.9)

      We are using the QJSEngine in one of our projects. There, we injected a C++ object to the JavaScript global scope. This object has a property returning a QVariant. 

      The problem is that in the JavaScript world this property does not return a "regular" JavaScript object - it does not have a function hasOwnProperty, which every regular JavaScript object has. The conversion itself seems to be working - the properties are all available...

      With Qt 6.7.3 it was working fine, but with Qt 6.9.0 it is broken.

        For Gerrit Dashboard: QTBUG-137328
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            n.wallmeier Nico Wallmeier
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes