QtQml: Allow access to base object members from VariantAssociationObject

Fixes: QTBUG-137328
Change-Id: I6bb58dc58a8e29eed4d73b51104deb4d58f4cec0
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e0620d4d67a6167b28fcf2c9de66f03aa664eea5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 956c5088d7512eba320df1cc22c32fa9b1473d89)